<resources>
    <string name="app_name">Radar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--connection errors-->
    <string name="remote_server_returned_error">Удаленный сервер вернул ошибку. Пожалуйста, попробуйте еще раз.</string>
    <string name="check_internet_connection">Пожалуйста, проверьте интернет соединение.</string>
    <string name="error_reading_server_response">Не получилось прочесть ответ сервера.</string>

    <string name="log_out">Выйти</string>
    <string name="drawer_open">Открыть меню</string>
    <string name="drawer_close">Закрыть меню</string>
    <string name="unable_to_load_map">Не получилось загрузить карту</string>
    <string name="logged_out">Вы вышли из приложения</string>
    <string name="my_location">Мое местоположение</string>


    <!--settings variables-->

    <string name="language">Язык</string>
    <string name="notification">Уведомление</string>
    <string name="notification_of">Выкл</string>
    <string name="notification_on">Вкл</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="uzbek">O`zbek</string>
    <string name="select_language">Выбрать язык</string>
    <string name="cancel">Отменить</string>
    <string name="settings">Настройки</string>
    <string name="login_with_google">Войти через Google</string>
    <string name="gps_settings">Настройки GPS</string>
    <string name="gps_not_enabled">GPS отключен</string>
    <string name="logout_tittle">Хотите выйти из приложения?</string>
    <string name="logout_massage">All information will be deleted</string>
    <string name="about_us">О нас</string>
    <string name="about_us_text"><b>X-Point</b> предупреждает о всех типах камер фиксирующих нарушения ПДД в пределах города Ташкента.\n\nИнформация по камерам обновляется ежедневно и постоянно корректируется специалистами X-Point.\n\nНаш адрес: г. Ташкент,\nЮнусабадский район, 15-61-19\n\nMail: <u>info@stc.uz</u></string>
    <string name="tel_number"><b>Тел:</b> </string>
    <string name="site"><b>Сайт:</b> xpoint.uz</string>
    <string name="app_language">Русский</string>
    <string name="need_permission">"Need Permission"</string>
    <string name="error_location">Ошибка при определении местоположения</string>

    <string name="azs_2km">Автозаправочные станции в радиусе 2 км</string>
    <string name="vul_2km">Сервисы вулканизации в радиусе 2 км</string>
    <string name="azs_5km">Автозаправочные станции в радиусе 5 км</string>
    <string name="vul_5km">Сервисы вулканизации в радиусе 5 км</string>
    <string name="azs_all">Автозаправочные станции города Ташкент</string>
    <string name="vul_all">Сервисы вулканизации города Ташкент</string>

    <string name="cameras">Камера</string>
    <string name="azs">Автозаправка</string>
    <string name="vul">Вулканизация</string>
</resources>
