<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/back_image"
                android:layout_margin="8dp"
                android:src="@drawable/ic_arrow_back__24dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toRightOf="@+id/back_image"
                android:layout_toEndOf="@+id/back_image"
                android:layout_centerVertical="true"
                android:text="@string/settings"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/language"
        android:layout_margin="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="#44444444"
            android:text="@string/app_language"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="#44444444"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="@dimen/textSize"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification"
            android:onClick="onClick"
            />
    </LinearLayout>


</LinearLayout>