<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="uz.radar.wiut.radar.activity.MapFragment">

    <FrameLayout
        android:id="@+id/mapFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/speed"
        style="@style/MyTextStyle"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_gravity="end|top"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/circle"
        android:clickable="true"
        android:gravity="center"
        android:text="0"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/gps"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_track_on" />

    <ImageButton
        android:id="@+id/addMarker"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="0dp"
        android:src="@drawable/ic_show_btn"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/markerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_gray"
        android:clickable="true"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/camera_markers"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cameras_btn" />

                <TextView
                    android:id="@+id/tvCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cameras"
                    android:textAlignment="center"
                    android:textSize="@dimen/smallTextSize" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAzs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/azs_markers"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_azs_btn" />

                <TextView
                    android:id="@+id/tvAzs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/azs"
                    android:textAlignment="center"
                    android:textSize="@dimen/smallTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vulk_markers"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_service_btn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/vul"
                    android:textAlignment="center"
                    android:textSize="@dimen/smallTextSize" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/close_marker_layout"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_close" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

